--- a/css/main.css
+++ b/css/main.css
@@ -292,3 +292,236 @@ img{
     Line-height: 16.8px;
     Line-height: 100%;
 }
+.section-four__title{
+    Font-family: 'Lato';
+    Font-style: 'Black';
+    Font-size: 24px;
+    color: #BDBDBD;
+    margin-top: 100px;
+    margin-bottom: 40px;
+    Line-height: 33.12px;
+    Line-height: 115%;
+}
+.section-four__down-title{
+    Font-family: 'Merriweather';
+    Font-style: 'Black';
+    Font-size: 48px;
+    color: #333333;
+    margin-bottom: 80px;
+    Line-height: 69.39px;
+    Line-height: 115%;
+}
+.section-four__list{
+    display: flex;
+}
+.section-four__item{
+    margin-right: 30px;
+}
+.section-four__carousel{
+    display: flex;
+    justify-content: space-between;
+}
+.section-four__span-line{
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    
+}
+.section-four__dot-span{
+    width: 7px;
+    height: 7px;
+    border: 3px solid #005FA3;
+    background-color: #005FA3;
+    border-radius: 50%;
+    margin-right: 40px;
+    opacity: 0.4;
+}
+.section-four__dot-span:nth-child(3){
+    opacity: 1;
+}
+.section-four__dot-span:hover{
+    opacity: 0.8;
+}
+/* .section-four__solider-btn{
+    opacity: 0.2;
+    transform: rotate(180deg);
+}
+.section-four__solider-btn{
+    opacity: 1;
+} */
+.section-four__carousel-right{
+    display: flex;
+}
+.section-four__carousel-right-item{
+    width: 60px;
+    height: 60px;
+    background-image: url(../images/slider__button-prev.svg);
+    /* transform: rotate(180deg); */
+}
+.section-four__carousel-right-item1{
+    width: 60px;
+    height: 60px;
+    background-image: url(../images/slider__button-prev.svg);
+    transform: rotate(180deg);
+}
+.section-four__carousel-right-item:hover{
+    background-image: url(../images/slider__button-next.svg);
+    transform: rotate(180deg);
+}
+.section-four__carousel-right-item1:hover{
+    background-image: url(../images/slider__button-next.svg);
+    transform: rotate(0deg);
+}
+.section-five__box{
+    width: 1920px;
+    padding-top: 140px;
+    padding-bottom: 140px;
+    background-color: white;
+    margin: 0 auto;
+}
+.section-five__title{
+    Font-family: 'Lato';
+    Font-style: 'Black';
+    Font-size: 24px;
+    color: #BDBDBD;
+    margin-bottom: 40px;
+    Line-height: 33.12px;
+    Line-height: 115%;
+}
+.section-five__down-title{
+    Font-family: 'Merriweather';
+    Font-style: 'Black';
+    Font-size: 48px;
+    color: #333333;
+    margin-bottom: 80px;
+    Line-height: 69.39px;
+    Line-height: 115%;
+}
+.section-five__comment-box{
+    background-color: #ebebeb;
+    padding: 45px 95px;
+}
+.section-five__text{
+    width: 920px;
+    height: 92px;
+}
+.section-five__name-box{
+    display: inline-block;
+    /* padding-top: 58px; */
+}
+.section-five__commentator-img{
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    margin-right: 35px;
+}
+.section-five__name-commentator{
+    Font-family: 'Lato';
+    Font-style: 'Black';
+    color: #000000;
+    margin-bottom: 10px;
+    /* margin-top: 10px; */
+    Font-size: 18px;;
+    Line-height: 24.84px;
+    Line-height: 115%;
+}
+.section-five__position-commentator{
+    Font-family: 'Lato';
+    Font-style: 'Regular';
+    Font-size: 14px;
+    color: #4f4f4f;
+    Line-height: 19.32px;
+    Line-height: 115%;
+}
+.right{
+    margin-top: 60px;
+}
+.footer{
+    background-image: url(../images/bgfirst.jpg);
+    background-repeat: no-repeat;
+    background-size:  cover;
+    width: 1920px;
+    padding-bottom: 243px;
+    margin: 0 auto;
+}
+.footer__title{
+    Font-family: 'Merriweather';
+    Font-style: 'Black';
+    Font-size: 48px;
+    color: white;
+    margin-bottom: 60px;
+    Line-height: 69.39px;
+    Line-height: 115%;
+}
+.footer__text{
+    color: #ffffff;
+    margin-bottom: 80px;
+    margin-top: 60px;
+    width: 445px;
+}
+.footer__box-left{
+    padding-top: 122px;
+}
+.footer__connect{
+    /* color: white; */
+    display: flex;
+}
+.footer__connect-item{
+    color: white;
+}
+.footer__phone-number{
+    color: white;
+    
+    margin-right: 40px;
+}
+.footer__mail{
+    color: white;
+  
+}
+.footer__mail-icon{
+    margin-right: 15px;
+}
+.footer__label-name{
+    color: #ffffff;
+}
+.footer__name{
+    width: 255px;
+    background-color: inherit;
+    border: inherit;
+    border-bottom: 2px solid white;
+    color: #ffffff;
+    margin-right: 30px;
+}
+.footer__box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__box-right{
+    margin-top: 135px;
+    display: flex;
+}
+.footer__form{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 100px;
+}
+.footer__name1{
+    width: 540px;
+    background-color: inherit;
+    border: inherit;
+    border-bottom: 2px solid white;
+    color: #ffffff;
+    margin-right: 30px;
+    /* padding-top: 35px; */
+}
+.footer__text-area{
+    margin-top: 35px;
+}
+.footer__btn{
+    padding: 19px 38px;
+    background-color: #005FA3;
+    color: white;
+    margin-top: 50px;
+    margin-left: 320px;
+}
